crates/smip_proc_macros/tests/ui-fail/methods-trait-impl.stderr
error: trait impls are not supported are not supported in impl block
 --> tests/ui-fail/methods-trait-impl.rs:7:1
  |
7 | impl ToString for Service {
  | ^^^^
